# markovian

./: CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  To do.md
benches/: brownian_motion.rs
examples/branching/: main.rs
examples/continuous_markov_chain/: main.rs
examples/continuous_space/: main.rs
examples/finite_markov_chain/: main.rs
examples/markov_chain/: main.rs
examples/non_markovian/: main.rs
examples/poisson/: main.rs
examples/time_dependent/: main.rs
old_examples/branching/: main.rs
old_examples/continuous_markov_chain/: main.rs
old_examples/continuous_space/: main.rs
old_examples/markov_chain/: main.rs
old_src/: discrete_time.rs  old_lib_documentation.rs
src/: branching_process.rs  continuous_finite_markov_chain.rs  continuous_markov_chain.rs  continuous_time.rs  discrete_time.rs  distributions.rs  errors.rs  finite_markov_chain.rs  lib.rs  macros.rs  markov_chain.rs  old_traits.rs  processes.rs  timed_markov_chain.rs  traits.rs  utils.rs
src/discrete_time/: branching.rs
src/distributions/: binary.rs  exponential_weighted.rs  raw.rs  unary.rs  weighted.rs
src/finite_markov_chain/: fast_sample.rs
src/processes/: branching.rs  poisson.rs
src/traits/: distribution_once.rs  exponential_clock.rs  probability.rs  random_iterator.rs  state.rs  state_iterator.rs  transition.rs
