[package]
name = "markovian"
version = "0.2.1"
authors = ["Raimundo Saona <rasa200@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rasa200/markovian"
documentation = "https://docs.rs/markovian"
homepage = "https://crates.io/crates/markovian"
description = """
Simulation of Markov Processes as stochastic processes.
"""
keywords = ["chain", "markov", "probability", "random", "numerics"]
categories = ["science", "mathematics", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
num-traits = "0.2.11"
thiserror = "1.0.15"

[dev-dependencies]
preexplorer = {path = "../preexplorer"}
rayon = "1.3.0"
ndarray = "0.13.0"
pretty_assertions = "0.6.1"
approx = "0.3.2"
rand_pcg = "0.2.1"
criterion = "0.3.2"

[[bench]]
name = "brownian_motion"
harness = false