[package]
name = "markovian"
version = "0.3.1"
authors = ["Raimundo Saona <rasa200@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/saona-raimundo/markovian"
documentation = "https://docs.rs/markovian"
homepage = "https://crates.io/crates/markovian"
description = """
Simulation of Markov Processes as stochastic processes.
"""
keywords = ["stochastic", "markov-chain", "chain", "markov", "probability", "random", "numerics", "math", "mathematics"]
categories = ["science", "mathematics", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
thiserror = "1.0"
ndarray = "0.13.1"


[dev-dependencies]
preexplorer = "0.3"
rayon = "1.3"
pretty_assertions = "0.6"
approx = "0.3"
rand_pcg = "0.3"
criterion = "0.3"
test-case = { git = "https://github.com/frondeus/test-case" } # test-case = "1.0.0"

[[bench]]
name = "brownian_motion"
harness = false
